package Banco.excepciones;

public class Operaciones extends Exception{
    public Operaciones(String mensaje) {
        super(mensaje);
    }

}
